fixed missing switch branches